js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib1/l1.2.kt
@JsExport
@JsName("bar")
fun foo() = 0
